<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAccount">

    <RelativeLayout
        android:id="@+id/appbar_acc"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="@color/app_identical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/appbar_title_acc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/str_fragment_acc_title"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:id="@+id/appbar_menu_icon_acc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_more_vert_24"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/desc_appbar_menu" />

    </RelativeLayout>


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/test_acc_fragment"
        android:gravity="center"/>

</RelativeLayout>