<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:elevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/card_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_heart_broken_24"
            android:contentDescription="@string/desc_records_icon" />
        <TextView
            android:id="@+id/item_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feat1"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/item_image"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/item_sub_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_date_1"
            android:layout_marginStart="10dp"
            android:textSize="13sp"
            android:layout_toEndOf="@+id/item_image"
            android:layout_below="@+id/item_header"
            android:gravity="center_vertical"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>